# uvms-simlab

./: CMakeLists.txt  README.md
resource/model_functions/vehicle/: uv_pid_controller_no_grav.casadi
resource/playback_profile/arm_payload_0p0kg/: replay.json
resource/playback_profile/arm_payload_0p19kg/: replay.json
resource/playback_profile/arm_reference_dense_25hz_payload_0p0kg/: replay.json
resource/playback_profile/arm_reference_dense_25hz_payload_0p38kg/: replay.json
resource/playback_profile/vehicle_fx_10n_20s/: replay.json
simlab/: cartesian_ruckig.py  mcap_to_diff_uv_csv.py  mcap_to_replay_profile.py  mcap_to_replay_recording.py  robot.py  uvms_parameters_real.py  uvms_parameters_sim.py
simlab/controllers/: __init__.py  cmd_replay.py  pid.py  pid_no_grav.py
test/: test_cmd_replay_columns.py  test_vehicle_yaw_continuity.py
